      potentially much slower) can be switched on by setting environment
      variable \env{_R_CHECK_COMPACT_DATA2_} to \samp{TRUE}.

      The types of files in the \code{data} directory are now checked,
      as packages are \emph{still} misusing it for non-\R data files.

      It now extracts and runs the \R code for each vignette in a
      separate directory and \R process. Rather than call
      \code{tools::checkVignettes()}, it calls
      \code{tool::buildVignettes()} to see if the vignettes can be
      re-built as they would be by \command{R CMD build}.  Option
      \option{--use-valgrind} now applies only to these runs, and not
      when running code to rebuild the vignettes.  This version does a
      much better job of suppressing output from successful vignette
      tests.
      
      The \file{00check.log} file is a more complete record of what is
      output to \file{stdout}: in particular contains more details of
      the tests.

      It now check all syntactically valid Rd usage entries, and warns
      about assignments (unless these give the usage of replacement
      functions).

      \file{.tar.xz} compressed tarballs are now allowed, if
      \command{tar} supports them (and setting environment variable
      \env{TAR} to \samp{internal} does on all platforms).
 
      \item \command{R CMD check} now warns if it finds
      \file{inst/doc/makefile}, and \command{R CMD build} renames such a
      file to \file{inst/doc/Makefile}.
   }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Installing \R no longer tries to find \command{perl}, and
      \command{R CMD} no longer tries to substitute a full path for
      \command{awk} nor \command{perl} -- this was a legacy from the
      days when they were used by \R itself.  Because a couple of
      packages do use \command{awk}, it is set as the \command{make}
      (rather than environment) variable \env{AWK}.
